// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UserButton > snapshots > should match snapshot for admin user 1`] = `
<div>
  <div
    class="userButton__container"
  >
    <button
      class="userButton userButton--admin"
      type="button"
    >
      Admin
    </button>
    <button
      aria-label="Settings"
      class="userButton userButton--icon"
      title="Settings"
      type="button"
    >
      <span
        class="userButton__icon"
      >
        ⚙
      </span>
    </button>
    <button
      class="userButton"
      type="button"
    >
      Sign Out
    </button>
  </div>
</div>
`;

exports[`UserButton > snapshots > should match snapshot for regular user 1`] = `
<div>
  <div
    class="userButton__container"
  >
    <button
      aria-label="Settings"
      class="userButton userButton--icon"
      title="Settings"
      type="button"
    >
      <span
        class="userButton__icon"
      >
        ⚙
      </span>
    </button>
    <button
      class="userButton"
      type="button"
    >
      Sign Out
    </button>
  </div>
</div>
`;
